--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ h1 {
   margin: 5rem;
 }
 
+#button-clicker {
+  background-color: aquamarine;
+  border: none;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: all 0.3s;
+  &:hover {
+    scale: 1.1;
+  }
+}
+
 .flex {
   display: flex;
   justify-content: center;
