--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  font-size: 1.5rem;
 }
 
 h1 {
@@ -24,7 +25,7 @@ h1 {
   }
 }
 
-.flex {
+.flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +33,20 @@ h1 {
 }
 
 .catchphrase {
-  font-size: 1.5rem;
   margin: 3rem 0;
   text-align: center;
+}
+
+.number {
+  margin: 3rem 0;
+  text-align: center;
+  background-color: blanchedalmond;
+  width: 10rem;
+  height: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25%;
+  font-size: 3rem;
+  font-weight: bold;
 }
