--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@ h1 {
 
 #container {
   margin: 5rem;
+  
 }
 
 #button-clicker {
+  display: block;
   background-color: aquamarine;
   border: none;
   padding: 1rem;
